--- a/snippets/css-variables.liquid
+++ b/snippets/css-variables.liquid
@@ -115,7 +115,7 @@
     --global-color-image-loader-primary: {{ settings.color_text | color_modify: 'alpha', 0.06 }};
     --global-color-image-loader-secondary: {{ settings.color_text | color_modify: 'alpha', 0.12 }};
 
-    {% comment %} SCH Brand Colors {% endcomment %}
+    {% comment %} SCH BRAND COLORS {% endcomment %}
 
     --sch-blue: #007d99;
     --sch-blue-80: #3397ad;
@@ -123,7 +123,7 @@
     --sch-blue-40: #99cbd6;
     --sch-blue-20: #cce5eb;
 
-    --sch-orange: EE7F4B;
+    --sch-orange: #ee7f4b;
     --sch-orange-80: #f1996f;
     --sch-orange-60: #f5b293;
     --sch-orange-40: #f8ccb7;
@@ -134,5 +134,7 @@
     --sch-gray-60: #afb1b3;
     --sch-gray-40: #afb1b3;
     --sch-gray-20: #e4e5e6;
+
+    --sch-white: #ffffff;
   }
 {% endstyle %}
