--- a/snippets/validate-checkout-modal.liquid
+++ b/snippets/validate-checkout-modal.liquid
@@ -11,7 +11,7 @@
     d. button title: return to cart
  {% endcomment %}
 
-<div id="cc-overlay" class="sch-overlay hidden"></div>
+{% comment %} <div id="cc-overlay" class="sch-overlay hidden"></div>
 <div id="cc-modal" class="sch-modal-content sch-modal-positioned hidden">
     <div class="sch-align-content">
         <div class="sch-modal-message sch-modal-text">
@@ -22,4 +22,164 @@
             <a id="close-modal-btn" class="btn" href={{ routes.root_url }}>RETURN TO HOME PAGE</a>
         </div>
     </div>
+</div> {% endcomment %}
+
+<div id="cc-overlay" class="sch-overlay hidden"></div>
+<div id="cc-modal" class="sch-modal-content sch-modal-positioned hidden">
+  <div id="cc-modal-body" class="">
+    <div data-step="contact_information">
+			<div>
+				<div>
+					<h2 class="cc-header" id="main-header">
+						Cost Center Order
+					</h2>
+				</div> 
+				<div>
+					<div>
+						<h2 class="cc-header" id="section-delivery-title">
+							Shipping address
+						</h2>
+					</div>
+					<form id="cost-center-form" novalidate="novalidate" method="post" required>
+						<input type="hidden" value="cart data" data-cart="{{ cart | json | escape }}" name="cart" id="cart">
+						<input type="hidden" value="customer id" data-customer-id="{{ customer.id | json | escape }}" name="customer_id" id="customer_id">
+						<input type="hidden" value="id signature" data-customer-id-signature="{{ customer.id | hmac_sha256: 'YellowDuck2021' | json | escape }}" name="customer_id_signature" id="customer_id_signature">
+						<input type="hidden" value="cart note" data-cart-note="{{ cart.note }}" name="cart-note" id="cart-note">
+						<div class="form-vertical">
+								<div data-address-field="first_name">
+									<label class="hidden" for="cfirst_name">First name</label>
+									<input placeholder="First name (required)" autocorrect="off" class="" aria-required="true" size="30" type="text" value="" name="first_name" id="first_name" required>
+								</div>
+								<div data-address-field="last_name">
+									<label class="hidden" for="last_name">Last name</label>
+									<input placeholder="Last name (required)" data-backup="last_name" class="" aria-required="true" size="30" type="text" value="" name="last_name" id="last_name" required>
+								</div>
+								<div data-address-field="address1" class="">
+									<label class="hidden" for="address1">Address</label>
+									<input placeholder="Address (required)" autocomplete="shipping address-line1" autocorrect="off" role="combobox" aria-autocomplete="list" aria-expanded="false" aria-required="true" class="" size="30" type="text" name="address1" id="address1" aria-haspopup="false" required>
+								</div>
+								<div data-address-field="mail_stop" class="">
+									<label class="hidden" for="checkout_shipping_address_mail_stop">Mail Stop</label>
+									<input placeholder="Mail Stop (optional)" class="" size="30" type="text" name="mail_stop" id="mail_stop">
+								</div>
+								<div data-address-field="city" class="">
+									<label class="hidden" for="city">City</label>
+									<input placeholder="City (required)" autocorrect="off" class="" aria-required="true" size="30" type="text" name="city" id="city" required>
+								</div>
+							<div class="cc-justify-content">
+								<div data-address-field="country">
+									<label class="hidden" for="country">Country/region</label>
+									<select size="1" class="" aria-required="true" name="country" id="country" placeholder="Country/region">
+										<option data-code="US" selected="selected" value="United States">United States</option>
+										<option data-code="CA" value="Canada">Canada</option>
+									</select>
+								</div>
+								<div class="cc-pad-input" data-address-field="province" data-autocomplete-field-container="true">
+									<label class="hidden" for="checkout_shipping_address_province">State</label>
+									<select placeholder="State" autocomplete="shipping address-level1" autocorrect="off" data-backup="province" aria-required="true" name="state" id="state">
+												<option disabled="">State</option>
+												<option data-alternate-values="[&quot;Alabama&quot;]" value="AL">Alabama</option>
+												<option data-alternate-values="[&quot;Alaska&quot;]" value="AK">Alaska</option>
+												<option data-alternate-values="[&quot;American Samoa&quot;]" value="AS">American Samoa</option>
+												<option data-alternate-values="[&quot;Arizona&quot;]" value="AZ">Arizona</option>
+												<option data-alternate-values="[&quot;Arkansas&quot;]" value="AR">Arkansas</option>
+												<option data-alternate-values="[&quot;California&quot;]" value="CA">California</option>
+												<option data-alternate-values="[&quot;Colorado&quot;]" value="CO">Colorado</option>
+												<option data-alternate-values="[&quot;Connecticut&quot;]" value="CT">Connecticut</option>
+												<option data-alternate-values="[&quot;Delaware&quot;]" value="DE">Delaware</option>
+												<option data-alternate-values="[&quot;Florida&quot;]" value="FL">Florida</option>
+												<option data-alternate-values="[&quot;Georgia&quot;]" value="GA">Georgia</option>
+												<option data-alternate-values="[&quot;Guam&quot;]" value="GU">Guam</option>
+												<option data-alternate-values="[&quot;Hawaii&quot;]" value="HI">Hawaii</option>
+												<option data-alternate-values="[&quot;Idaho&quot;]" value="ID">Idaho</option>
+												<option data-alternate-values="[&quot;Illinois&quot;]" value="IL">Illinois</option>
+												<option data-alternate-values="[&quot;Indiana&quot;]" value="IN">Indiana</option>
+												<option data-alternate-values="[&quot;Iowa&quot;]" value="IA">Iowa</option>
+												<option data-alternate-values="[&quot;Kansas&quot;]" value="KS">Kansas</option>
+												<option data-alternate-values="[&quot;Kentucky&quot;]" value="KY">Kentucky</option>
+												<option data-alternate-values="[&quot;Louisiana&quot;]" value="LA">Louisiana</option>
+												<option data-alternate-values="[&quot;Maine&quot;]" value="ME">Maine</option>
+												<option data-alternate-values="[&quot;Marshall Islands&quot;]" value="MH">Marshall Islands</option>
+												<option data-alternate-values="[&quot;Maryland&quot;]" value="MD">Maryland</option>
+												<option data-alternate-values="[&quot;Massachusetts&quot;]" value="MA">Massachusetts</option>
+												<option data-alternate-values="[&quot;Michigan&quot;]" value="MI">Michigan</option>
+												<option data-alternate-values="[&quot;Federated States of Micronesia&quot;]" value="FM">Micronesia</option>
+												<option data-alternate-values="[&quot;Minnesota&quot;]" value="MN">Minnesota</option>
+												<option data-alternate-values="[&quot;Mississippi&quot;]" value="MS">Mississippi</option>
+												<option data-alternate-values="[&quot;Missouri&quot;]" value="MO">Missouri</option>
+												<option data-alternate-values="[&quot;Montana&quot;]" value="MT">Montana</option>
+												<option data-alternate-values="[&quot;Nebraska&quot;]" value="NE">Nebraska</option>
+												<option data-alternate-values="[&quot;Nevada&quot;]" value="NV">Nevada</option>
+												<option data-alternate-values="[&quot;New Hampshire&quot;]" value="NH">New Hampshire</option>
+												<option data-alternate-values="[&quot;New Jersey&quot;]" value="NJ">New Jersey</option>
+												<option data-alternate-values="[&quot;New Mexico&quot;]" value="NM">New Mexico</option>
+												<option data-alternate-values="[&quot;New York&quot;]" value="NY">New York</option>
+												<option data-alternate-values="[&quot;North Carolina&quot;]" value="NC">North Carolina</option>
+												<option data-alternate-values="[&quot;North Dakota&quot;]" value="ND">North Dakota</option>
+												<option data-alternate-values="[&quot;Northern Mariana Islands&quot;]" value="MP">Northern Mariana Islands</option>
+												<option data-alternate-values="[&quot;Ohio&quot;]" value="OH">Ohio</option>
+												<option data-alternate-values="[&quot;Oklahoma&quot;]" value="OK">Oklahoma</option>
+												<option data-alternate-values="[&quot;Oregon&quot;]" value="OR">Oregon</option>
+												<option data-alternate-values="[&quot;Palau&quot;]" value="PW">Palau</option>
+												<option data-alternate-values="[&quot;Pennsylvania&quot;]" value="PA">Pennsylvania</option>
+												<option data-alternate-values="[&quot;Puerto Rico&quot;]" value="PR">Puerto Rico</option>
+												<option data-alternate-values="[&quot;Rhode Island&quot;]" value="RI">Rhode Island</option>
+												<option data-alternate-values="[&quot;South Carolina&quot;]" value="SC">South Carolina</option>
+												<option data-alternate-values="[&quot;South Dakota&quot;]" value="SD">South Dakota</option>
+												<option data-alternate-values="[&quot;Tennessee&quot;]" value="TN">Tennessee</option>
+												<option data-alternate-values="[&quot;Texas&quot;]" value="TX">Texas</option>
+												<option data-alternate-values="[&quot;Virgin Islands&quot;]" value="VI">U.S. Virgin Islands</option>
+												<option data-alternate-values="[&quot;Utah&quot;]" value="UT">Utah</option>
+												<option data-alternate-values="[&quot;Vermont&quot;]" value="VT">Vermont</option>
+												<option data-alternate-values="[&quot;Virginia&quot;]" value="VA">Virginia</option>
+												<option data-alternate-values="[&quot;Washington&quot;]" value="WA">Washington</option>
+												<option data-alternate-values="[&quot;District of Columbia&quot;]" value="DC">Washington DC</option>
+												<option data-alternate-values="[&quot;West Virginia&quot;]" value="WV">West Virginia</option>
+												<option data-alternate-values="[&quot;Wisconsin&quot;]" value="WI">Wisconsin</option>
+												<option data-alternate-values="[&quot;Wyoming&quot;]" value="WY">Wyoming</option>
+												<option data-alternate-values="[&quot;Armed Forces Americas&quot;]" value="AA">Armed Forces Americas</option>
+												<option data-alternate-values="[&quot;Armed Forces Europe&quot;]" value="AE">Armed Forces Europe</option>
+												<option data-alternate-values="[&quot;Armed Forces Pacific&quot;]" value="AP">Armed Forces Pacific</option>
+									</select>
+								</div>
+								<div class="zip" data-address-field="zip" data-autocomplete-field-container="true">
+									<label class="hidden" for="checkout_shipping_address_zip">ZIP code</label>
+									<input placeholder="ZIP code (required)" autocomplete="shipping postal-code" autocorrect="off" aria-required="true" size="30" type="text" name="zip" id="zip" required>
+								</div>
+							</div>
+							<div data-address-field="phone" class="">
+								<label class="hidden" for="checkout_shipping_address_phone">Phone</label>
+								<input placeholder="Phone (required)" autocomplete="shipping tel" autocorrect="off" data-backup="phone" data-phone-formatter="true" class="" aria-required="true" size="30" type="tel" name="phone" id="phone">
+							</div>
+							<div data-address-field="cost-center-number" class="">
+								<label class="hidden" for="cost_center_number">Cost Center ID</label>
+								<input type="number" width="auto" maxlength="12" placeholder="COST CENTER ID (required)" class="" name="cost_center_number" id="cost_center_number" required>
+							</div>
+						</div> 
+					</div> 
+				</div>
+				<div>
+					<button type="submit" name="mechanic_cart_submit"
+						class="btn btn--small-wide"
+						id="mechanic_cart_submit"
+					>
+						Submit Order
+					</button>
+					<a href="https://seattlechildrenshospital.myshopify.com/cart">
+						<span class="">Return to cart</span>
+					</a>
+				</div>
+      </form>
+			{% comment %} Success Message {% endcomment %}
+    </div>
+  </div>
+	<div id="cc-success" class="sch-align-content hidden">
+		<div class="sch-modal-message sch-modal-text">
+			<h2>Your Order Was Submitted Successfully!</h2>
+			<p>You will receive a confirmation email shortly.</p>
+		</div>
+		<div class="btn-container">
+			<a id="close-modal-btn" class="btn" href={{ routes.root_url }}>RETURN TO HOME PAGE</a>
+		</div>
+	</div>
 </div>
